git add data_science-portfolio.html git add. git commit -main git push -u origin main

--- a/data_science-portfolio.html
+++ b/data_science-portfolio.html
@@ -111,11 +111,11 @@
             </div>
 
             <div class="project">
-                <h3>Food sales dashboard.</h3>
-                <p><strong>Objective:</strong> Analyze sales trend, customers, and products performance.</p>
-                <p><strong>Tools:</strong> Excel, Power BI, DAX.</p>
-                <p><strong>Result:</strong> Interactive dashboard with filters by customer and product</p>
-                <p><a href="https://app.powerbi.com/groups/me/reports/7feed659-d0ff-4645-930e-9566412190a0?ctid=c9f4db1f-ad98-4fc3-b9f8-b5b578929a0b&pbi_source=linkShare" target="_blank">Power BI link</a></p>
+                <h3>Employee Performance Analytics (FP20 Analytics Challenge) </h3>
+                <p><strong>Objective:</strong> To monitor, evaluate, and improve workforce productivity by leveraging data-driven insights on employee performance.</p>
+                <p><strong>Tools:</strong> Excel, Power BI, DAX, Zoomcharts.</p>
+                <p><strong>Result:</strong> Interactive dashboard that provides a comprehensive view of workforce dynamics by analyzing turnover, salaries, performance trends, training impact, store sales, satisfaction, and productivity. </p>
+                <p><a href="https://app.powerbi.com/view?r=eyJrIjoiYWZjZTA4MzktN2RlMC00MTExLTgxYzAtZDI4MDVjNTQxNTlkIiwidCI6IjQ2NTRiNmYxLTBlNDctNDU3OS1hOGExLTAyZmU5ZDk0M2M3YiIsImMiOjl9" target="_blank">Power BI link</a></p>
             </div>
         </section>
 
