git add. git commit -m git push origin main git push -u origin main

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section>
             <h2>Resume</h2>
             <p>You can download my resume below for a more detailed look at my education, experience, and skills:</p>
-            <p><a href="Umoru Telvin’s CV.pdf" download>📄 Download My Resume (PDF)</a></p>
+            <p><a href="C:\Users\Umoru\Downloads\porfolio\Umoru_Telvin_CV.pdf" download>📄 Download My Resume (PDF)</a></p>
         </section>
     </main>
     <footer>
