git add. git commit -m git push origin main git push -u origin main

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section>
             <h2>About Me</h2>
             <p>I'm a data science enthusiast with a deep interest in using data to solve real-world problems. I believe in data integrity, privacy, and transparency — just like the Norton of analytics.</p>
-            <p>📍 Nigeria | 📧 umorutelvin@gmail.com | 🔗 <a href="https://github.com/Umorutelvin" target="_blank">GitHub Profile</a> | 🌐 <a href="#">Data_science_portfolio.io</a></p> | <a href="https://www.linkedin.com/in/telvin-umoru-92b410277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BsPuPtPEQS2CqWh4G6ty3CA%3D%3D" target="_blank">LinkedIn Profile</a></p>
+            <p>📍 Nigeria | 📧 umorutelvin@gmail.com | 🔗 <a href="https://github.com/Umorutelvin" target="_blank">GitHub Profile</a> | <a href="https://www.linkedin.com/in/telvin-umoru-92b410277?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BsPuPtPEQS2CqWh4G6ty3CA%3D%3D" target="_blank">LinkedIn Profile</a></p>
         </section>
 
         <section>
@@ -158,7 +158,7 @@
         <section>
             <h2>Resume</h2>
             <p>You can download my resume below for a more detailed look at my education, experience, and skills:</p>
-            <p><a href="C:\Users\Umoru\Downloads\porfolio\Umoru_Telvin_CV.pdf" download>📄 Download My Resume (PDF)</a></p>
+            <p><a href="Umoru_Telvin_CV.pdf" download>📄 Download My Resume (PDF)</a></p>
         </section>
     </main>
     <footer>
