--- a/index.html
+++ b/index.html
@@ -90,8 +90,16 @@
                 <h3> Cancel Prediction.</h3>
                 <p><strong>Objective:</strong> Identify the type of cancel using the model.</p>
                 <p><strong>Tools:</strong> Python, Scikit-learn, Pandas, Matplotlib, classification.</p>
-                <p><strong>Result:</strong> 86% model accuracy.</p>
+                <p><strong>Result:</strong> 86% model accuracy. Deployed on Streamlit.</p>
                 <p><a href="https://github.com/Umorutelvin/Cancer_prediction.git" target="_blank">GitHub Repo</a></p>
+            </div>
+
+            <div class="project">
+                <h3>Fraud Detection Model.</h3>
+                <p><strong>Objective:</strong> To build a predictive model that detects and flags potentially fraudulent financial activities with high accuracy.</p>
+                <p><strong>Tools:</strong> Python, Panda, Seaborn, Matplotlib, Regression.</p>
+                <p><strong>Result:</strong> 90% model accuracy. Deployed on Streamlit.</p>
+                <p><a href="https://github.com/Umorutelvin/fraud_detection_model.git" target="_blank">Github Repo</a></p>
             </div>
 
             <div class="project">
